--- a/azurecoremvc/azurecoremvc.csproj
+++ b/azurecoremvc/azurecoremvc.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="4.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1" />
   </ItemGroup>
 
